fixed loader alignment

--- a/src/css/loader.module.css
+++ b/src/css/loader.module.css
@@ -5,6 +5,7 @@
     font-size: 10px;
     position: relative;
     text-indent: -9999em;
+    box-sizing: border-box;
     border-left: 3px solid rgba(255, 255, 255, .2);
     border-right: 3px solid rgba(255, 255, 255, .2);
     border-bottom: 3px solid rgba(255, 255, 255, .2);
