--- a/src/css/match.module.css
+++ b/src/css/match.module.css
@@ -19,7 +19,7 @@
 }
 
 .match .matchdata>div[isloader] {
-    margin: 10px auto;
+    margin: 25px auto;
 }
 
 .win {
